edited dockerfile to reduce image size